Add top-down and bottom-up solutions to the step-climbing DP problem

--- a/LeetCode/dynamic_programming.ipynb
+++ b/LeetCode/dynamic_programming.ipynb
@@ -67,6 +67,38 @@
     "memo = [None] * (total_steps + 1) # + 1 for top step (no cost)\n",
     "cumulative_cost(total_steps, cost, memo)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70909aa4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Step-climbing: top-down and bottom-up solutions\n",
+    "\n",
+    "def minimum_cost_climbing_stairs(costs):\n",
+    "    def compute_minimum_cost(step_index):\n",
+    "        if step_index <= 1:\n",
+    "            return 0\n",
+    "        if step_index in memoization:\n",
+    "            return memoization[step_index]\n",
+    "        memoization[step_index] = min(compute_minimum_cost(step_index - 1) + costs[step_index - 1], \n",
+    "                                      compute_minimum_cost(step_index - 2) + costs[step_index - 2])\n",
+    "        return memoization[step_index]\n",
+    "    \n",
+    "    memoization = {}\n",
+    "    return compute_minimum_cost(len(costs))\n",
+    "\n",
+    "\n",
+    "def minimum_cost_climbing_stairs_iterative(costs):\n",
+    "    number_of_steps = len(costs)\n",
+    "    dp_costs = [0] * (number_of_steps + 1)\n",
+    "    for step_index in range(2, number_of_steps + 1):\n",
+    "        dp_costs[step_index] = min(dp_costs[step_index - 1] + costs[step_index - 1], \n",
+    "                                   dp_costs[step_index - 2] + costs[step_index - 2])\n",
+    "    return dp_costs[number_of_steps]\n"
+   ]
   }
  ],
  "metadata": {
