--- a/LeetCode/dynamic_programming.ipynb
+++ b/LeetCode/dynamic_programming.ipynb
@@ -2,9 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "id": "9512ed0c",
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "# Import libraries\n",
@@ -25,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 32,
    "id": "25c55043",
    "metadata": {
     "metadata": {}
@@ -37,7 +39,7 @@
        "45"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -70,9 +72,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "id": "70909aa4",
-   "metadata": {},
+   "metadata": {
+    "metadata": {}
+   },
    "outputs": [],
    "source": [
     "# Step-climbing: top-down and bottom-up solutions\n",
@@ -98,6 +102,146 @@
     "        dp_costs[step_index] = min(dp_costs[step_index - 1] + costs[step_index - 1], \n",
     "                                   dp_costs[step_index - 2] + costs[step_index - 2])\n",
     "    return dp_costs[number_of_steps]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "f2369e40",
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "670"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Example 1: 198. House Robber\n",
+    "\n",
+    "# You are planning to rob houses along a street. \n",
+    "# The ith house has nums[i] money. \n",
+    "# If you rob two houses beside each other, the alarm system will trigger and alert the police. \n",
+    "# What is the most money you can rob without alerting the police?\n",
+    "\n",
+    "house_money = [120, 50, 300, 200, 100, 250]\n",
+    "len_houses = len(house_money)\n",
+    "value_optimal_action = [None] * len_houses\n",
+    "\n",
+    "def calculate_house_value(i, house_money, value_optimal_action):\n",
+    "    imax = len(house_money) - 1\n",
+    "\n",
+    "    if i > imax:\n",
+    "        return 0\n",
+    "    \n",
+    "    if i == imax:\n",
+    "        return house_money[i]\n",
+    "    \n",
+    "    if value_optimal_action[i] is not None:\n",
+    "        return value_optimal_action[i]\n",
+    "    \n",
+    "    else:\n",
+    "        value_rob_here = house_money[i] + calculate_house_value(i + 2, house_money, value_optimal_action)\n",
+    "        value_rob_next = calculate_house_value(i + 1, house_money, value_optimal_action)\n",
+    "        value_optimal_action[i] = max(value_rob_here, value_rob_next)\n",
+    "        return value_optimal_action[i]\n",
+    "    \n",
+    "calculate_house_value(0, house_money, value_optimal_action)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "id": "c2418f5a",
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "670\n"
+     ]
+    }
+   ],
+   "source": [
+    "from functools import cache\n",
+    "\n",
+    "def wrapper(house_money):\n",
+    "    @cache\n",
+    "    def calculate_house_value_cache(i):\n",
+    "        imax = len(house_money) - 1\n",
+    "\n",
+    "        if i > imax:\n",
+    "            return 0\n",
+    "        \n",
+    "        if i == imax:\n",
+    "            return house_money[i]\n",
+    "        \n",
+    "        else:\n",
+    "            value_rob_here = house_money[i] + calculate_house_value_cache(i + 2)\n",
+    "            value_rob_next = calculate_house_value_cache(i + 1)\n",
+    "            value_optimal_action = max(value_rob_here, value_rob_next)\n",
+    "            return value_optimal_action\n",
+    "        \n",
+    "    return calculate_house_value_cache(0)\n",
+    "\n",
+    "print(wrapper(house_money))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "b22f9db6",
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 2: 300. Longest Increasing Subsequence\n",
+    "\n",
+    "# Given an integer array nums, \n",
+    "# return the length of the longest strictly increasing subsequence.\n",
+    "\n",
+    "from functools import cache\n",
+    "\n",
+    "nums = [10, 9, 2, 5, 3, 7, 101, 18]\n",
+    "def find_max_length(nums):\n",
+    "\n",
+    "    @cache\n",
+    "    def calculate_length_reward(i):\n",
+    "        if i == (len(nums) - 1):\n",
+    "            return 1\n",
+    "        else:\n",
+    "            max_reward = 1\n",
+    "            for j in range(i + 1, len(nums)):\n",
+    "                if nums[i] < nums[j]:\n",
+    "                    reward_with_j = 1 + calculate_length_reward(j)\n",
+    "                    max_reward = max(reward_with_j, max_reward)\n",
+    "            return max_reward\n",
+    "    \n",
+    "    rewards = []\n",
+    "    for i in range(len(nums)):\n",
+    "        rewards.append(calculate_length_reward(i))\n",
+    "    return max(rewards)\n",
+    "\n",
+    "print(find_max_length(nums))"
    ]
   }
  ],
