Solve question-answer-or-skip DP problem

--- a/LeetCode/dynamic_programming.ipynb
+++ b/LeetCode/dynamic_programming.ipynb
@@ -243,6 +243,70 @@
     "\n",
     "print(find_max_length(nums))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "id": "adb78391",
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "10"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Example 3: 2140. Solving Questions With Brainpower\n",
+    "\n",
+    "# You are given a 0-indexed 2D integer array questions where questions[i] = [pointsi,brainpoweri​]. \n",
+    "# You have to process the questions in order. \n",
+    "# Solving question i will earn you pointsi​ points but you will be unable to solve each of the next brainpoweri​ questions. \n",
+    "# If you skip question i, you get to decide on the next question. Return the maximum points you can score.\n",
+    "\n",
+    "def calculate_max_points_from_all_questions(questions):\n",
+    "    max_points = {}\n",
+    "    i_max = (len(questions) - 1)\n",
+    "\n",
+    "    def calculate_max_points_from_qi(i):\n",
+    "        if i > i_max:\n",
+    "            return 0\n",
+    "        \n",
+    "        if i not in max_points:\n",
+    "        \n",
+    "            if i == i_max:\n",
+    "                max_points[i] = questions[i][0]\n",
+    "\n",
+    "            else:\n",
+    "                skip = questions[i][1]\n",
+    "                max_points_if_solve = questions[i][0] + calculate_max_points_from_qi(i + 1 + skip)\n",
+    "                max_points_if_skip = calculate_max_points_from_qi(i + 1)\n",
+    "                max_points[i] = max(max_points_if_solve, max_points_if_skip)\n",
+    "                # print(max_points_if_solve, max_points_if_skip)\n",
+    "\n",
+    "        return max_points[i]\n",
+    "\n",
+    "    result = calculate_max_points_from_qi(0)\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "questions = [\n",
+    "    [3, 2],\n",
+    "    [4, 3],\n",
+    "    [5, 2],\n",
+    "    [6, 1],\n",
+    "    [7, 0]\n",
+    "]\n",
+    "\n",
+    "calculate_max_points_from_all_questions(questions)"
+   ]
   }
  ],
  "metadata": {
