Solve DP problem for the minimum number of coins required to form a total

--- a/LeetCode/dynamic_programming.ipynb
+++ b/LeetCode/dynamic_programming.ipynb
@@ -307,6 +307,62 @@
     "\n",
     "calculate_max_points_from_all_questions(questions)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 65,
+   "id": "2dff5e62",
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-1"
+      ]
+     },
+     "execution_count": 65,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 322. Coin Change\n",
+    "# You are given an integer array coins representing coins of different denominations \n",
+    "# and an integer amount representing a total amount of money.\n",
+    "# Return the fewest number of coins that you need to make up that amount.\n",
+    "# If that amount of money cannot be made up by any combination of the coins, return -1.\n",
+    "# You may assume that you have an infinite number of each kind of coin.\n",
+    "\n",
+    "def find_minimum_number_of_coin_steps(coins, amount):\n",
+    "\n",
+    "    def find_minimum_number_of_coin_steps_for_amount(current_amount):\n",
+    "        if current_amount > amount:\n",
+    "            return None\n",
+    "        if current_amount == amount:\n",
+    "            return 0\n",
+    "        if min_steps_by_amount[current_amount] != float('inf'):\n",
+    "            return min_steps_by_amount[current_amount]\n",
+    "        for coin in coins:\n",
+    "            new_amount = current_amount + coin\n",
+    "            if new_amount <= amount:\n",
+    "                new_steps = 1 + find_minimum_number_of_coin_steps_for_amount(new_amount)\n",
+    "                min_steps_by_amount[current_amount] = min(min_steps_by_amount[current_amount], new_steps)\n",
+    "        \n",
+    "        return min_steps_by_amount[current_amount]    \n",
+    "\n",
+    "    min_steps_by_amount = [float('inf')] * (amount + 1) # minimand\n",
+    "    minimum_total_steps = find_minimum_number_of_coin_steps_for_amount(0)\n",
+    "    if minimum_total_steps == float('inf'):\n",
+    "        return -1\n",
+    "    else:\n",
+    "        return minimum_total_steps\n",
+    " \n",
+    "coins = [1, 5, 10, 25]\n",
+    "amount = 63\n",
+    "find_minimum_number_of_coin_steps(coins, amount)"
+   ]
   }
  ],
  "metadata": {
