Solve DP problem for the maximum profit with a constrained number of trades

--- a/LeetCode/dynamic_programming.ipynb
+++ b/LeetCode/dynamic_programming.ipynb
@@ -26,6 +26,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "b616c225",
+   "metadata": {},
+   "source": [
+    "## One-dimensional Problems"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 32,
    "id": "25c55043",
@@ -362,6 +370,84 @@
     "coins = [1, 5, 10, 25]\n",
     "amount = 63\n",
     "find_minimum_number_of_coin_steps(coins, amount)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "552d205b",
+   "metadata": {},
+   "source": [
+    "## Multidimensional Problems"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "1ec66448",
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "655\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 2: 188. Best Time to Buy and Sell Stock IV\n",
+    "\n",
+    "# You are given an integer array prices \n",
+    "# where prices[i] is the price of a given stock on the ith day, \n",
+    "# and an integer k. \n",
+    "# You can buy the stock and sell it, \n",
+    "# but you can only hold on to one unit of stock at any given time. \n",
+    "# Find the maximum profit you can achieve with at most k transactions.\n",
+    "\n",
+    "# state = (day, have_stock, trades_remaining)\n",
+    "# actions / transitions = buy_stock if not have_stock, sell_stock if have_stock (and n_trades < k)\n",
+    "# return = -prices[i] if buy_stock, +prices if sell_stock\n",
+    "\n",
+    "def find_max_profit_from_t0(prices, k):\n",
+    "\n",
+    "    def find_max_profit_from_current_state(i, own_stock, remaining_trades):\n",
+    "        if remaining_trades == 0:\n",
+    "            return 0\n",
+    "        \n",
+    "        if i == i_max:\n",
+    "            if own_stock:\n",
+    "                return prices[i]\n",
+    "            if not own_stock:\n",
+    "                return 0\n",
+    "\n",
+    "        state = (i, own_stock, remaining_trades)\n",
+    "\n",
+    "        if state in max_return_by_state:\n",
+    "            return max_return_by_state[state]\n",
+    "\n",
+    "        profit_hold = find_max_profit_from_current_state(i + 1, own_stock, remaining_trades)\n",
+    "\n",
+    "        if not own_stock:\n",
+    "            profit_buy = - prices[i] + find_max_profit_from_current_state(i + 1, True, remaining_trades - 1)\n",
+    "            max_return_by_state[state] = max(profit_hold, profit_buy)\n",
+    "        \n",
+    "        if own_stock:\n",
+    "            profit_sell = + prices[i] + find_max_profit_from_current_state(i + 1, False, remaining_trades - 1) \n",
+    "            max_return_by_state[state] = max(profit_hold, profit_sell)\n",
+    "        \n",
+    "        return max_return_by_state[state]\n",
+    "\n",
+    "    max_return_by_state = {}\n",
+    "    i_max = len(prices) - 1\n",
+    "    max_return = find_max_profit_from_current_state(i=0, own_stock=False, remaining_trades=k)\n",
+    "    return max_return\n",
+    "\n",
+    "\n",
+    "prices = [100, 180, 260, 310, 40, 535, 695]\n",
+    "k = 2\n",
+    "print(find_max_profit_from_t0(prices, k))\n"
    ]
   }
  ],
