Solve DP problem for calculating the maximum value of coins picked up from piles

--- a/LeetCode/dynamic_programming.ipynb
+++ b/LeetCode/dynamic_programming.ipynb
@@ -449,6 +449,67 @@
     "k = 2\n",
     "print(find_max_profit_from_t0(prices, k))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "23dacdee",
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 3: 2218. Maximum Value of K Coins From Piles\n",
+    "\n",
+    "# There are n piles of coins on a table. \n",
+    "# Each pile consists of a positive number of coins of assorted denominations.\n",
+    "# In one move, you can choose any coin on top of any pile, remove it, and add it to your wallet. \n",
+    "# Given a list piles, where piles[i] is a list of integers denoting the composition of the ith pile from top to bottom, \n",
+    "# and a positive integer k, \n",
+    "# return the maximum total value of coins you can have in your wallet \n",
+    "# if you choose exactly k coins optimally.\n",
+    "\n",
+    "from collections import deque\n",
+    "\n",
+    "# state = coin timestep, pile structure\n",
+    "# maximand = total value of coins\n",
+    "# action = which pile to remove a coin from \n",
+    "\n",
+    "def find_max_value_all_coins(piles, k):\n",
+    "\n",
+    "    def max_value_by_state(i, piles_queue):\n",
+    "        if i == k:\n",
+    "            return 0\n",
+    "        \n",
+    "        if len(piles_queue) == 0:\n",
+    "            return 0\n",
+    "\n",
+    "        max_value = 0\n",
+    "        for j in range(len(piles_queue)):\n",
+    "            if piles_queue[j]:\n",
+    "                coin = piles_queue[j].popleft()\n",
+    "                current_value = coin + max_value_by_state(i + 1, piles_queue)\n",
+    "                max_value = max(max_value, current_value)\n",
+    "                piles_queue[j].appendleft(coin) # backtrack\n",
+    "        \n",
+    "        return max_value\n",
+    "\n",
+    "    piles_queue = [deque(pile) for pile in piles]\n",
+    "    max_value = max_value_by_state(0, piles_queue)\n",
+    "    return max_value\n",
+    "\n",
+    "piles = [[9, 8, 7], [6, 5, 4], [3, 2, 1]]\n",
+    "k = 4\n",
+    "print(find_max_value_all_coins(piles, k))\n"
+   ]
   }
  ],
  "metadata": {
