--- a/LeetCode/dynamic_programming.ipynb
+++ b/LeetCode/dynamic_programming.ipynb
@@ -510,6 +510,127 @@
     "k = 4\n",
     "print(find_max_value_all_coins(piles, k))\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8ed2909",
+   "metadata": {},
+   "source": [
+    "## Matrix Dynamic Programming"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "660c679e",
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 1: 62. Unique Paths\n",
+    "\n",
+    "# There is a robot on an m x n grid. \n",
+    "# The robot is initially located at the top-left corner and wants to move to the bottom-right corner. \n",
+    "# The robot can only move either down or right. \n",
+    "# Given m and n, return the number of possible unique paths that the robot can take to reach the bottom-right corner.\n",
+    "\n",
+    "m = 3\n",
+    "n = 3\n",
+    "start = [0, 0]\n",
+    "goal = [m - 1, n - 1]\n",
+    "\n",
+    "def count_paths_to_goal(location):\n",
+    "    if location == goal:\n",
+    "        return 1\n",
+    "\n",
+    "    right_paths = 0\n",
+    "    if location[1] < goal[1]:\n",
+    "        right_location = [location[0], location[1] + 1]\n",
+    "        right_paths += count_paths_to_goal(right_location)\n",
+    "\n",
+    "    down_paths = 0\n",
+    "    if location[0] < goal[0]:\n",
+    "        down_location = [location[0] + 1, location[1]]\n",
+    "        down_paths += count_paths_to_goal(down_location)\n",
+    "\n",
+    "    total_paths = down_paths + right_paths\n",
+    "\n",
+    "    return total_paths\n",
+    "\n",
+    "print(count_paths_to_goal(start))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "60f09b44",
+   "metadata": {
+    "metadata": {}
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Example 2: 64. Minimum Path Sum\n",
+    "\n",
+    "# Given a m x n grid filled with non-negative numbers, \n",
+    "# find a path from top left to bottom right, \n",
+    "# which minimizes the sum of all numbers along its path. \n",
+    "# Return this sum. \n",
+    "# You can only move down or right.\n",
+    "\n",
+    "\n",
+    "def find_minimum_cost_path(grid):\n",
+    "\n",
+    "    def minimise_sum_to_goal(i, j):\n",
+    "        if i == m and j == n:\n",
+    "            return grid[i][j]\n",
+    "\n",
+    "        down_cost = float('inf')\n",
+    "        right_cost = float('inf')\n",
+    "\n",
+    "        if (i, j) in min_cost_by_state:\n",
+    "            return min_cost_by_state[(i, j)]\n",
+    "\n",
+    "        if i < m:\n",
+    "            down_cost = grid[i][j] + minimise_sum_to_goal(i + 1, j)\n",
+    "\n",
+    "        if j < n:\n",
+    "            right_cost = grid[i][j] + minimise_sum_to_goal(i, j + 1)\n",
+    "\n",
+    "        min_cost_by_state[(i, j)] = min(down_cost, right_cost)\n",
+    "\n",
+    "        return min_cost_by_state[(i, j)]\n",
+    "\n",
+    "    m = len(grid) - 1\n",
+    "    n = len(grid[0]) - 1\n",
+    "    min_cost_by_state = {}\n",
+    "\n",
+    "    return minimise_sum_to_goal(0,0)\n",
+    "\n",
+    "grid = [\n",
+    "    [1, 3, 1, 2],\n",
+    "    [1, 5, 1, 2],\n",
+    "    [4, 2, 1, 2]\n",
+    "]\n",
+    "\n",
+    "print(find_minimum_cost_path(grid))\n"
+   ]
   }
  ],
  "metadata": {
