--- a/programming_practice/initial_practice.ipynb
+++ b/programming_practice/initial_practice.ipynb
@@ -549,6 +549,232 @@
     "    \n",
     "find_min_rotting_time(0, 1)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b68091c0",
+   "metadata": {},
+   "source": [
+    "33. Search in Rotated Sorted Array\n",
+    "Medium\n",
+    "Topics\n",
+    "Companies\n",
+    "There is an integer array nums sorted in ascending order (with distinct values).\n",
+    "\n",
+    "Prior to being passed to your function, nums is possibly rotated at an unknown pivot index k (1 <= k < nums.length) such that the resulting array is [nums[k], nums[k+1], ..., nums[n-1], nums[0], nums[1], ..., nums[k-1]] (0-indexed). For example, [0,1,2,4,5,6,7] might be rotated at pivot index 3 and become [4,5,6,7,0,1,2].\n",
+    "\n",
+    "Given the array nums after the possible rotation and an integer target, return the index of target if it is in nums, or -1 if it is not in nums.\n",
+    "\n",
+    "You must write an algorithm with O(log n) runtime complexity.\n",
+    "\n",
+    " \n",
+    "\n",
+    "Example 1:\n",
+    "\n",
+    "Input: nums = [4,5,6,7,0,1,2], target = 0\n",
+    "Output: 4\n",
+    "Example 2:\n",
+    "    \n",
+    "Input: nums = [4,5,6,7,0,1,2], target = 3\n",
+    "Output: -1\n",
+    "Example 3:\n",
+    "\n",
+    "Input: nums = [1], target = 0\n",
+    "Output: -1\n",
+    " \n",
+    "\n",
+    "Constraints:\n",
+    "\n",
+    "1 <= nums.length <= 5000\n",
+    "-104 <= nums[i] <= 104\n",
+    "All values of nums are unique.\n",
+    "nums is an ascending array that is possibly rotated.\n",
+    "-104 <= target <= 104"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "id": "311bd043",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# INITIAL SOLUTION (contains error for the test case shown)\n",
+    "\n",
+    "class Solution:\n",
+    "    def search(self, nums, target: int) -> int:\n",
+    "        left = 0\n",
+    "        right = len(nums) - 1\n",
+    "\n",
+    "        while left <= right:\n",
+    "            mid = (left + right) // 2\n",
+    "            print(mid)\n",
+    "\n",
+    "            if target == nums[mid]:\n",
+    "                return mid\n",
+    "            \n",
+    "            if target < nums[mid]:\n",
+    "                if target >= nums[left]:    \n",
+    "                    right = mid - 1\n",
+    "                else:\n",
+    "                    left = mid + 1\n",
+    "\n",
+    "            if target > nums[mid]:\n",
+    "                 if target <= nums[right]:\n",
+    "                    left = mid + 1\n",
+    "                 else:\n",
+    "                    right = mid - 1\n",
+    "    \n",
+    "        return -1 \n",
+    "\n",
+    "# GPT4 SOLUTION:\n",
+    "\n",
+    "class Solution:\n",
+    "    def search(self, nums, target: int) -> int:\n",
+    "        left = 0\n",
+    "        right = len(nums) - 1\n",
+    "\n",
+    "        while left <= right:\n",
+    "            mid = (left + right) // 2\n",
+    "\n",
+    "            if nums[mid] == target:\n",
+    "                return mid\n",
+    "\n",
+    "            # Check if the left side is sorted\n",
+    "            if nums[left] <= nums[mid]:\n",
+    "                if nums[left] <= target < nums[mid]:\n",
+    "                    right = mid - 1\n",
+    "                else:\n",
+    "                    left = mid + 1\n",
+    "            # The right side must be sorted\n",
+    "            else:\n",
+    "                if nums[mid] < target <= nums[right]:\n",
+    "                    left = mid + 1\n",
+    "                else:\n",
+    "                    right = mid - 1\n",
+    "\n",
+    "        return -1 \n",
+    "\n",
+    "# TEST CASES\n",
+    "\n",
+    "# nums = [x for x in range(8)] \n",
+    "# nums = [5,1,3]\n",
+    "# target = 5\n",
+    "\n",
+    "nums = [4,5,6,7,8,1,2,3]\n",
+    "target = 8\n",
+    "\n",
+    "answer = Solution().search(nums, target)\n",
+    "print(answer)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d16a0b50",
+   "metadata": {},
+   "source": [
+    "39. Combination Sum\n",
+    "Medium\n",
+    "Topics\n",
+    "Companies\n",
+    "Given an array of distinct integers candidates and a target integer target, return a list of all unique combinations of candidates where the chosen numbers sum to target. You may return the combinations in any order.\n",
+    "\n",
+    "The same number may be chosen from candidates an unlimited number of times. Two combinations are unique if the \n",
+    "frequency of at least one of the chosen numbers is different.\n",
+    "\n",
+    "The test cases are generated such that the number of unique combinations that sum up to target is less than 150 combinations for the given input.\n",
+    "\n",
+    "Example 1:\n",
+    "\n",
+    "Input: candidates = [2,3,6,7], target = 7\n",
+    "Output: [[2,2,3],[7]]\n",
+    "Explanation:\n",
+    "2 and 3 are candidates, and 2 + 2 + 3 = 7. Note that 2 can be used multiple times.\n",
+    "7 is a candidate, and 7 = 7.\n",
+    "These are the only two combinations.\n",
+    "Example 2:\n",
+    "\n",
+    "Input: candidates = [2,3,5], target = 8\n",
+    "Output: [[2,2,2,2],[2,3,3],[3,5]]\n",
+    "Example 3:\n",
+    "\n",
+    "Input: candidates = [2], target = 1\n",
+    "Output: []\n",
+    " \n",
+    "\n",
+    "Constraints:\n",
+    "\n",
+    "1 <= candidates.length <= 30\n",
+    "2 <= candidates[i] <= 40\n",
+    "All elements of candidates are distinct.\n",
+    "1 <= target <= 40"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b4953785",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def combinationSum(self, candidates: List[int], target: int) -> List[List[int]]:\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fbe8cac1",
+   "metadata": {},
+   "source": [
+    "46. Permutations\n",
+    "Medium\n",
+    "Topics\n",
+    "Companies\n",
+    "Given an array nums of distinct integers, return all the possible permutations. You can return the answer in any order.\n",
+    "\n",
+    " \n",
+    "\n",
+    "Example 1:\n",
+    "\n",
+    "Input: nums = [1,2,3]\n",
+    "Output: [[1,2,3],[1,3,2],[2,1,3],[2,3,1],[3,1,2],[3,2,1]]\n",
+    "Example 2:\n",
+    "\n",
+    "Input: nums = [0,1]\n",
+    "Output: [[0,1],[1,0]]\n",
+    "Example 3:\n",
+    "\n",
+    "Input: nums = [1]\n",
+    "Output: [[1]]\n",
+    " \n",
+    "\n",
+    "Constraints:\n",
+    "\n",
+    "1 <= nums.length <= 6\n",
+    "-10 <= nums[i] <= 10\n",
+    "All the integers of nums are unique."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "89977ee9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Solution:\n",
+    "    def permute(self, nums: List[int]) -> List[List[int]]:\n",
+    "  "
+   ]
   }
  ],
  "metadata": {
