Practice problems on pointers and BFS

--- a/programming_practice/initial_practice.ipynb
+++ b/programming_practice/initial_practice.ipynb
@@ -355,36 +355,29 @@
     "#                         triplets.append([nums[i], nums[j], nums[k]])\n",
     "#         return triplets\n",
     "\n",
-    "      \n",
     "class Solution:\n",
-    "    def threeSum(self, nums: list[int]) -> list[list[int]]:\n",
-    "        nums.sort()  # Sort the array to use two-pointer technique\n",
-    "        triplets = []\n",
-    "        len_nums = len(nums)\n",
+    "    def threeSum(self, nums: List[int]) -> List[List[int]]:\n",
+    "        nums.sort()\n",
+    "        triplets = set()\n",
+    "        for i in range(len(nums) - 2):\n",
+    "            firstNum = nums[i]\n",
+    "            j = i + 1\n",
+    "            k = len(nums) - 1\n",
+    "            while j < k:\n",
+    "                secondNum  = nums[j]\n",
+    "                thirdNum = nums[k]\n",
     "\n",
-    "        for i in range(len_nums - 2):\n",
-    "            # Skip duplicate values for the first number\n",
-    "            if i > 0 and nums[i] == nums[i - 1]:\n",
-    "                continue\n",
-    "            \n",
-    "            left, right = i + 1, len_nums - 1\n",
-    "            while left < right:\n",
-    "                current_sum = nums[i] + nums[left] + nums[right]\n",
-    "                if current_sum == 0:\n",
-    "                    triplets.append([nums[i], nums[left], nums[right]])\n",
-    "                    left += 1\n",
-    "                    right -= 1\n",
-    "                    # Skip duplicate values for the second and third numbers\n",
-    "                    while left < right and nums[left] == nums[left - 1]:\n",
-    "                        left += 1\n",
-    "                    while left < right and nums[right] == nums[right + 1]:\n",
-    "                        right -= 1\n",
-    "                elif current_sum < 0:\n",
-    "                    left += 1\n",
+    "                potentialSum = firstNum + secondNum + thirdNum \n",
+    "                if potentialSum > 0:\n",
+    "                    k -= 1\n",
+    "                elif potentialSum < 0:\n",
+    "                    j += 1\n",
     "                else:\n",
-    "                    right -= 1\n",
-    "\n",
+    "                    triplets.add((firstNum , secondNum ,thirdNum))\n",
+    "                    j += 1\n",
+    "                    k -= 1\n",
     "        return triplets\n",
+    "    # https://leetcode.com/problems/3sum/solutions/3523898/beats-99-48-44-145-top-interview-question/\n",
     "\n",
     "nums = [-1,0,1,2,-1,-4]\n",
     "print(Solution().threeSum(nums))"
