--- a/programming_practice/expanded_practice.ipynb
+++ b/programming_practice/expanded_practice.ipynb
@@ -142,12 +142,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "d2399ce7",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-2, 2]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Heaps: TODO"
+    "import heapq\n",
+    "\n",
+    "points = [[1,3],[-2,2]]\n",
+    "k = 1\n",
+    "\n",
+    "def find_k_shortest_distances(points, k):\n",
+    "\n",
+    "    min_k_distances = []\n",
+    "    for point in points:\n",
+    "        distance  = (point[0]**2 + point[1]**2)**(0.5)\n",
+    "        heapq.heappush(min_k_distances, (-distance, point))\n",
+    "        if len(min_k_distances) > k:\n",
+    "            heapq.heappop(min_k_distances)\n",
+    "\n",
+    "    coordinates = [point for (distance, point) in min_k_distances]\n",
+    "\n",
+    "    return coordinates\n",
+    "\n",
+    "answer = find_k_shortest_distances(points, k)\n",
+    "print(answer)\n",
+    "\n",
+    "# Output: [[-2,2]]\n"
    ]
   },
   {
