Practice backtracking with the loop iterable i as an argument - combinations-that-make-a-target-sum problem

--- a/LeetCode/backtracking.ipynb
+++ b/LeetCode/backtracking.ipynb
@@ -27,6 +27,14 @@
   },
   {
    "cell_type": "markdown",
+   "id": "2df10e2f",
+   "metadata": {},
+   "source": [
+    "### Permutation / Combination Problems"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "a3ac904c",
    "metadata": {},
    "source": [
@@ -360,6 +368,80 @@
     "    return digit_combinations\n",
     "\n",
     "answer = find_all_sequence_combinations(digits)\n",
+    "print(answer)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83a17a5d",
+   "metadata": {},
+   "source": [
+    "### Generation problems"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5a3001ba",
+   "metadata": {},
+   "source": [
+    "**Example 1: 39. Combination Sum**\n",
+    "\n",
+    "Given an array of distinct positive integers candidates and a target integer target,  \n",
+    "return a list of all unique combinations of candidates where the chosen numbers sum to target.  \n",
+    "The same number may be chosen from candidates an unlimited number of times.  \n",
+    "Two combinations are unique if the frequency of at least one of the chosen numbers is different. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "b17c0223",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[2, 2, 3], [7]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "candidates = [2,3,6,7]\n",
+    "target = 7\n",
+    "answer = [[2,2,3],[7]] # the 2 can be used multiple times\n",
+    "\n",
+    "def find_combos_matching_sum(candidates, target):\n",
+    "\n",
+    "    def build_or_finish_combo(current_combo, current_sum, i):\n",
+    "\n",
+    "        if current_sum == target:\n",
+    "            valid_combos.append(current_combo[:])\n",
+    "            return \n",
+    "\n",
+    "        len_candidates = len(candidates)\n",
+    "\n",
+    "        for i in range(i, len_candidates):\n",
+    "\n",
+    "            current_integer = candidates[i]\n",
+    "            current_sum += current_integer\n",
+    "\n",
+    "            if current_sum <= target:\n",
+    "                current_combo.append(current_integer)\n",
+    "                build_or_finish_combo(current_combo, current_sum, i)\n",
+    "                current_combo.pop()\n",
+    "\n",
+    "            current_sum -= current_integer\n",
+    "    \n",
+    "    current_sum = 0\n",
+    "    current_combo = []\n",
+    "    valid_combos = []\n",
+    "\n",
+    "    build_or_finish_combo(current_combo, current_sum, 0)\n",
+    "\n",
+    "    return valid_combos\n",
+    "\n",
+    "answer = find_combos_matching_sum(candidates, target)\n",
     "print(answer)"
    ]
   }
